--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,82 +1,152 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" >
+    tools:context=".MainActivity" >
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="できるだけ負けろ！"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="30dp"
-        android:textColor="#000000" />
-
-    <ImageButton
-        android:layout_width="200px"
-        android:layout_height="250px"
-        android:id="@+id/tyoki_bt"
-        android:src="@drawable/tyoki"
-        android:layout_alignTop="@+id/gu_bt"
+        android:textColor="#111111"
+        android:textSize="20dp"
+        android:layout_above="@+id/CPU_tv"
         android:layout_centerHorizontal="true" />
 
+
+    <!-- じゃんけんの画像 -->
+
+
+    <TextView
+        android:id="@+id/time_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="00:00"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="20dp"
+        android:textColor="#000"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_toRightOf="@+id/textView6"
+        android:layout_toEndOf="@+id/textView6" />
+
+
     <ImageButton
-        android:layout_width="200px"
-        android:layout_height="250px"
+        android:id="@+id/tyoki_bt"
+        android:layout_width="250px"
+        android:layout_height="300px"
+        android:layout_alignTop="@+id/gu_bt"
+        android:layout_centerHorizontal="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/tyoki" />
+
+    <ImageButton
         android:id="@+id/gu_bt"
-        android:src="@drawable/gu"
-        android:layout_below="@+id/batoru"
+        android:layout_width="250px"
+        android:layout_height="300px"
+        android:layout_above="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/gu" />
+
+    <ImageButton
+        android:id="@+id/pa_bt"
+        android:layout_width="250px"
+        android:layout_height="300px"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/tyoki_bt"
+        android:scaleType="fitXY"
+        android:src="@drawable/pa" />
+
+    <ImageView
+        android:id="@+id/batoru"
+        android:layout_width="250px"
+        android:layout_height="300px"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:scaleType="fitXY"
+        android:src="@drawable/mihon" />
+
+
+    <!-- -->
+
+
+    <TextView
+        android:id="@+id/CPU_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/batoru"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerInside"
+        android:text="CPU"
+        android:textColor="#111111"
+        android:textSize="25dp" />
+
+    <Button
+        android:id="@+id/start_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="スタート" />
+
+    <Button
+        android:id="@+id/end_bt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:text="終了" />
+
+    <TextView
+        android:id="@+id/syouri_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="勝利回数：0"
+        android:textSize="20dp"
+        android:textColor="#000"
+        android:layout_below="@+id/textView6"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <ImageButton
-        android:layout_width="200px"
-        android:layout_height="250px"
-        android:id="@+id/pa_bt"
-        android:src="@drawable/pa"
-        android:layout_alignTop="@+id/tyoki_bt"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:layout_width="200px"
-        android:layout_height="250px"
-        android:id="@+id/batoru"
-        android:src="@drawable/muhon"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/tyoki_bt"
-        android:layout_alignStart="@+id/tyoki_bt" />
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="画像をタッチして勝負"
+        android:textColor="#111111"
+        android:textSize="25dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="相手の手"
-        android:id="@+id/textView2"
-        android:textSize="25dp"
-        android:textColor="#000000"
-        android:layout_above="@+id/batoru"
-        android:layout_centerHorizontal="true" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="スタート"
-        android:id="@+id/start_bt"
-        android:layout_alignParentBottom="true"
+        android:text="制限時間："
+        android:id="@+id/textView6"
+        android:textSize="20dp"
+        android:textColor="#000"
+        android:textIsSelectable="false"
+        android:layout_below="@+id/end_bt"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
 
-    <Button
+    <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="終了"
-        android:id="@+id/end_bt"
+        android:id="@+id/editText_name"
+        android:text=""
+        android:hint="名前入力"
         android:layout_alignTop="@+id/start_bt"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
