--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,152 +1,188 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:layout_alignParentLeft="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentTop="true"
+    android:orientation="vertical"
+    android:weightSum="4">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="できるだけ負けろ！"
-        android:textColor="#111111"
-        android:textSize="20dp"
-        android:layout_above="@+id/CPU_tv"
-        android:layout_centerHorizontal="true" />
+        android:layout_weight="1"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:weightSum="5">
+
+            <Button
+                android:id="@+id/end_bt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="終了" />
+
+            <EditText
+                android:id="@+id/editText_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="3"
+                android:hint="名前入力"
+                android:text="" />
+
+            <Button
+                android:id="@+id/start_bt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:onClick="start"
+                android:text="スタート" />
+        </LinearLayout>
 
 
-    <!-- じゃんけんの画像 -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="制限時間："
+                android:textColor="#000"
+                android:textSize="20dp" />
+
+            <TextView
+                android:id="@+id/time_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00"
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="#000"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/syouri_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="勝利回数：0"
+            android:textColor="#000"
+            android:textSize="20dp" />
 
 
-    <TextView
-        android:id="@+id/time_tv"
-        android:layout_width="wrap_content"
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="00:00"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="20dp"
-        android:textColor="#000"
-        android:layout_alignTop="@+id/textView6"
-        android:layout_toRightOf="@+id/textView6"
-        android:layout_toEndOf="@+id/textView6" />
+        android:layout_gravity="center_horizontal"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="2"
+            android:weightSum="3"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="できるだけ負けろ！"
+                android:textColor="#111111"
+                android:layout_weight="0.5"
+                android:textSize="20dp"
+                android:layout_gravity="center_horizontal" />
 
 
-    <ImageButton
-        android:id="@+id/tyoki_bt"
-        android:layout_width="250px"
-        android:layout_height="300px"
-        android:layout_alignTop="@+id/gu_bt"
-        android:layout_centerHorizontal="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/tyoki" />
-
-    <ImageButton
-        android:id="@+id/gu_bt"
-        android:layout_width="250px"
-        android:layout_height="300px"
-        android:layout_above="@+id/textView3"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/gu" />
-
-    <ImageButton
-        android:id="@+id/pa_bt"
-        android:layout_width="250px"
-        android:layout_height="300px"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignTop="@+id/tyoki_bt"
-        android:scaleType="fitXY"
-        android:src="@drawable/pa" />
-
-    <ImageView
-        android:id="@+id/batoru"
-        android:layout_width="250px"
-        android:layout_height="300px"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:scaleType="fitXY"
-        android:src="@drawable/gu" />
+            <TextView
+                android:id="@+id/CPU_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside"
+                android:text="CPU"
+                android:layout_weight="2.5"
+                android:textColor="#111111"
+                android:textSize="20dp"
+                android:layout_gravity="center_horizontal"/>
+        </LinearLayout>
 
 
-    <!-- -->
+	    <!-- fitXYは縦横に画像を合わせる(不採用) -->
+        <ImageView
+            android:id="@+id/CPU_janken"
+            android:layout_width="250px"
+            android:layout_height="300px"
+            android:layout_weight="3"
+            android:scaleType="centerInside"
+            android:src="@drawable/gu"
+            android:background="#00000000"
+            android:layout_gravity="center_horizontal"/>
 
 
-    <TextView
-        android:id="@+id/CPU_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/batoru"
-        android:layout_centerHorizontal="true"
-        android:scaleType="centerInside"
-        android:text="CPU"
-        android:textColor="#111111"
-        android:textSize="25dp" />
-
-    <Button
-        android:id="@+id/start_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="スタート" />
-
-    <Button
-        android:id="@+id/end_bt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:text="終了" />
-
-    <TextView
-        android:id="@+id/syouri_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="勝利回数：0"
-        android:textSize="20dp"
-        android:textColor="#000"
-        android:layout_below="@+id/textView6"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:text="画像をタッチして勝負"
-        android:textColor="#111111"
-        android:textSize="25dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="制限時間："
-        android:id="@+id/textView6"
-        android:textSize="20dp"
-        android:textColor="#000"
-        android:textIsSelectable="false"
-        android:layout_below="@+id/end_bt"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/editText_name"
-        android:text=""
-        android:hint="名前入力"
-        android:layout_alignTop="@+id/start_bt"
-        android:layout_centerHorizontal="true" />
+        <!-- じゃんけんの画像 -->
 
 
-</RelativeLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_weight="3"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+	        <ImageButton
+		        android:id="@+id/gu_bt"
+		        android:layout_width="250px"
+		        android:layout_height="300px"
+		        android:layout_weight="1"
+		        android:scaleType="centerInside"
+		        android:background="#00000000"
+		        android:src="@drawable/gu" />
+
+            <ImageButton
+                android:id="@+id/tyoki_bt"
+                android:layout_width="250px"
+                android:layout_height="300px"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:background="#00000000"
+                android:src="@drawable/tyoki" />
+
+
+            <ImageButton
+                android:id="@+id/pa_bt"
+                android:layout_width="250px"
+                android:layout_height="300px"
+                android:layout_weight="1"
+                android:scaleType="centerInside"
+                android:background="#00000000"
+                android:src="@drawable/pa" />
+        </LinearLayout>
+
+        <!-- -->
+
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="画像をタッチして勝負"
+            android:textColor="#111111"
+            android:textSize="25dp"
+            android:layout_gravity="center_horizontal" />
+    </LinearLayout>
+
+</LinearLayout>
