--- a/app/src/main/res/layout/activity_ranking.xml
+++ b/app/src/main/res/layout/activity_ranking.xml
@@ -24,7 +24,8 @@
         android:layout_alignParentStart="true"
         android:layout_above="@+id/button"
         android:layout_below="@+id/textView2"
-        android:headerDividersEnabled="true" />
+        android:headerDividersEnabled="true"
+        android:textColor = "#ffffff" />
 
     <TextView
         android:layout_width="wrap_content"
